syntax = "proto3";

package com.example.internalapi.request.user.get_all.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/user.proto";

message GetAllUsersRequest {

}

message GetAllUsersResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.UserList users = 1;
  }
}
